<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0AA7B"
    tools:context="com.google.distlergrace.cityguide.MainActivity">

    <ImageView
        android:id="@+id/imageViewSkyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/skyline" />

    <TextView
        android:id="@+id/textViewMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMainTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSkyline"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAttractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textViewAttractions"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainTitle"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/buttonArch"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForTheArch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAttractions"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonForestPark"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForForestPark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonArch"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonTheLoop"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForTheLoop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForestPark"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCityMuseum"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForTheCityMuseum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTheLoop"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textViewDining"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCityMuseum"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/buttonTedDrewes"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForTedDrewes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDining"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonTheHill"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForTheHill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTedDrewes"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonMomsDeli"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonForMomsDeli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTheHill"
        app:layout_constraintVertical_bias="0.00999999" />

</androidx.constraintlayout.widget.ConstraintLayout>